# electronics-network

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
